# zswap-cli

./: Cargo.toml  README.md
.github/workflows/: rust.yml
rpm/: zswap-cli.conf  zswap-cli.md  zswap-cli.service  zswap-cli.spec
src/: main.rs  structs.rs  utils.rs
src/utils/: constants.rs
