[package]
name = "zswap-cli"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8"
whoami = "0.8.1"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_ini = "0.2.0"