[package]
name = "zswap-cli"
version = "1.0.3"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
clap = "2.33.1"
env_logger = "0.7.1"
lazy_static = "1.4.0"
libc = "0.2.72"
procfs = "0.8.0"
log = "0.4.8"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_ini = "0.2.0"
whoami = "0.9.0"